[tool.poetry]
name = "data-viewer"
version = "0.1.0"
description = "A Data Viewer for Big Data Formats"
authors = ["Humberto Esparza <humberto.dev96@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
